# Tfe

./: .gitignore  CMakeLists.txt  README.md  graph.cpp  graph.h  io.cpp  io.h  main.cpp  main_mpi.cpp  topology.cpp  topology.h  topology_mpi.cpp  topology_mpi.h
data/: Partition_cube_1.msh  Partition_cube_2.msh  Partition_more_complex_1.msh  Partition_more_complex_2.msh  Partition_square_1.msh  Partition_square_2.msh  large_output_5dim.msh  more_complex_output_4dim.msh  square_output_2dom.msh  square_output_3dom.msh
ddm/: Elasticity.pro  Helmholtz_error.pro  Maxwell.pro
ddm_waves/: COPYING.txt  Decomposition.pro  Elasticity.pro  Maxwell.pro  Schwarz.pro  circle_concentric.geo  circle_concentric.pro  circle_concentric_data.geo  circle_pie.geo  circle_pie.pro  cobra.geo  cobra.pro  cobra_data.geo  cobra_visu.geo  cylinder_concentric.geo  cylinder_concentric.pro  freespace.geo  freespace.pro  freespace_data.geo  freespace_visu.geo  marmousi.geo  marmousi.pro  marmousi_data.geo  sphere_concentric.geo  sphere_concentric.pro  waveguide2d.db  waveguide2d.geo  waveguide2d.msh  waveguide2d.pre  waveguide2d.pro  waveguide2d_data.geo  waveguide2d_data.geo~  waveguide3d.geo  waveguide3d.pro  waveguide3d_data.geo  waveguide3d_visu.geo
examples/: carre.geo  cobra.geo  cube.geo  cube.msh  hex.msh  large.geo  large.msh  more_complex.geo  more_complex.msh  more_complex_output_4dim.msh  physical.geo  physical.msh  pie.geo  pie.msh  pie2.geo  pie3D.geo  square.msh  square_output_2dom.msh  square_output_3dom.msh
my_pie_that_works/: Helmholtz.pro  SchwarzMacros.pro  circle_pie.db  circle_pie.pre  circle_pie.pro  global.msh  partition.pro
old/: topology.cpp  topology.h
other_pie/2/: circle_pie.pre  global.msh  partition.pro
other_pie/4/: circle_pie.pre  global.msh  partition.pro
other_pie/null/: circle_pie.pre
other_pie/old_pie/: circle_pie.pre  circle_pie.pro  circle_pie_data.geo
pie/2/: circle_pie.pre  partition.pro
pie/3/: circle_pie.pre  circle_pie.pro  partition.pro
pie/4/: circle_pie.pre  partition.pro
pie/base/: Helmholtz.pro  circle_pie.pre
pie/error/: Helmholtz_error.pro  Schwarz.pro  circle_pie.db  circle_pie.pre  circle_pie.pro  partition.pro
pie/test/: circle_pie.db  circle_pie.pre  partition.pro
salt/: geometry.geo  main.cpp  salt
salt/ground/: ground.pro  partition.pro
